# gdk-text-renderer

./: .gitmodules  CMakeLists.txt  README.md
include/gdk/: dynamic_text_renderer.h  static_text_renderer.h  text_renderer.h
src/: dynamic_text_renderer.cpp  static_text_renderer.cpp  text_renderer.cpp
